--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-blur": "~9.0.3",
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
