--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-blur": "~9.0.3",
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
+    "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
